# open-alpha-arena

./: .gitignore  AGENTS.md  Dockerfile  README.md  package.json  pnpm-lock.yaml
backend/: main.py  migrate_unified_accounts.py  models.py  pyproject.toml  test_ai_trader.py  test_auto_trader_live.py  test_websocket_snapshot.py  verify_trades_display.py
backend/api/: account_management_routes.py  account_routes.py  ai_account_routes.py  config_routes.py  crypto_routes.py  demo_routes.py  market_data_routes.py  order_routes.py  ranking_routes.py  user_routes.py  ws.py
backend/config/: settings.py
backend/database/: connection.py  models.py
backend/factors/: __init__.py  momentum.py  support.py
backend/repositories/: account_repo.py  kline_repo.py  order_repo.py  position_repo.py  user_repo.py
backend/schemas/: account.py  order.py  user.py
backend/services/: ai_decision_service.py  asset_calculator.py  asset_curve_calculator.py  auto_trader.py  hyperliquid_market_data.py  market_data.py  news_feed.py  order_executor.py  order_matching.py  order_monitor.py  order_scheduler.py  price_cache.py  scheduler.py  startup.py  trading_commands.py
docs/: README.md
docs/01-security-foundation/: credential-manager.md  database-models.md
docs/02-exchange-integration/: ccxt-integration.md
docs/05-risk-management/: risk-manager.md
docs/06-testing-framework/: testnet-setup.md
docs/07-deployment-guide/: pre-deployment-checklist.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/app/: index.css  main.tsx
frontend/app/lib/: api.ts
(+22 files in other folders)
